--- a/src/app/pokemon/pokemon.component.html
+++ b/src/app/pokemon/pokemon.component.html
@@ -1,7 +1,7 @@
 <div class="pokemon-encounter">
   <div class="pokemon-pic-section">
     <div class="pokemon-box">
-      <img class="pokemon-pic" src="../../assets/pokemons/{{ currentPokemon.pic }}" alt="icon">
+      <img class="pokemon-pic" src=".././assets/pokemons/{{ currentPokemon.pic }}" alt="icon">
     </div>
   </div>
 
