--- a/src/styles.css
+++ b/src/styles.css
@@ -68,7 +68,7 @@ a.navbar-brand {
   }
   
   .bg-img {
-    background-image: url("assets/bg2.jpg");
+    background-image: url("./assets/bg2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
